# form_filler

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: gen_windows_exe.yaml
src/form_filler/: __main__.py  form_filler.py
