[project]
name = "form_filler"
version = "0.0.1"
description = "Fill forms from Excel files"
readme = "README.md"
requires-python = ">= 3.13.3"
authors = [
    {name = "Martin Tome", email = "mrtn.tome@gmail.com"},
]
dependencies = [
    "pyinstaller == 6.14.1",
    "Jinja2 == 3.1.6",
    "openpyxl == 3.1.5",
    "PyPDFForm == 2.5.0",
    "PyYAML == 6.0.2",
]

[build-system]
requires = ["pyinstaller"]
